--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,33 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Inria Sans", sans-serif;
   font-weight: 400;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: #EFEFEF;
+
+  box-sizing: border-box;
+
+  max-width: 1280px;
+
+  margin: 0 auto;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 1rem;
+}
+
+ul {
+  margin: 0;
+}
+
+p {
+  margin: 0;
 }
